loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:9: error: ')' expected but integer literal found.
    if (biscuit s>= 3) {
                    ^Poucet1:15: error: illegal start of simple expression
} while (!sortieTrouvee) 
^